oracle/readeck/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck-service
spec:
  selector:
    app: readeck
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
